--- a/demo6/css/style.css
+++ b/demo6/css/style.css
@@ -45,16 +45,14 @@ body {
 	font-family:'Raleway', Arial;
 	font-weight:300;
 	font-size:15px;
-	color:#464646;
+	color:#fff;
 	width:100%; 
 	height:100%; 
 	background:#ebf1f5;
 }
 
 .container { position:relative; }
-.services{
-	 background: #9b59b6;
-}
+
 .property-categories{
 	background: #95a5a6;
 }
@@ -109,7 +107,7 @@ body {
 }
 
 /* typography */
-h1,h2,h3,h4,h5,h6 { font-family:'Raleway', Helvetica; color:#3a464e; }
+h1,h2,h3,h4,h5,h6 { font-family:'Raleway', Helvetica; color:#fff; }
 h1 { font-size:45px; }
 h2 { font-size:40px; }
 h3 { font-size:30px; }
@@ -143,7 +141,7 @@ a:hover { color:#68b4e8; text-decoration:none; }
 	border-radius:3px;
 	border:none;
 	background-color:#48a0dc;
-	display:inline-block;
+	
 	width:auto;
 	cursor:pointer;
 	transition: all 0.2s linear;
@@ -381,7 +379,7 @@ textarea.border,
 /*====================================================================================*/
  /* 03 HEADER
 /*====================================================================================*/
-header { background:white; width:100%; position:relative; z-index:1000; }
+header { background:white; width:100%; position:relative; z-index:1000; color: #59AEE9; }
 
 /* TOPBAR */
 .top-bar {
@@ -1606,33 +1604,62 @@ header { background:white; width:100%; position:relative; z-index:1000; }
 	
 }
 /* SERVICES */
+.services{
+	 background: #FBFBFB;
+}
+.services h2, .services p{
+	 color: #0078AE;
+}
 .services { padding-top:0; }
 .services .service-item {
-	background:#323746;
+	/* background:#e67e22; */
 	padding:0% 10% 12% 10%;
 	text-align:center;
 	line-height:1.6;
 	font-size:14px;
 	position:relative;
 	z-index:10;
+	margin-top: 50px;
 }
 
-.services .service-item:hover .fa { background:#67b5ea; }
+.services .service-item:hover .fa { /* background:#67b5ea; */ }
 
 .services .service-item .fa {
-	width:110px;
-	height:110px;
-	color:white;
-	background:#59aee9;
-	font-size:45px;
-	padding-top:25px;
+	width: 140px;
+	height: 140px;
+	font-size: 53px;
+	padding-top: 37px;
 	border-radius:100px;
 	margin-top:-40px;
 	margin-bottom:30px;
-	border:5px solid white;
+	border:3px solid white;
 	transition:all 0.4s;
+	box-shadow: 0px 0px 10px #ccc;
 }
-
+.services .wow:nth-child(1), .services .wow:nth-child(1) h4 {
+	color: #72980D;
+}
+.services .wow:nth-child(2), .services .wow:nth-child(2) h4 {
+	color: #F28F0E;
+}
+.services .wow:nth-child(3), .services .wow:nth-child(3) h4 {
+	color: #862EA0;
+}
+.services .wow:nth-child(4), .services .wow:nth-child(4) h4 {
+	color: #009DDC;
+}
+.services .wow:nth-child(5), .services .wow:nth-child(5) h4 {
+	color: #AA4141;
+}
+.services .wow:nth-child(6), .services .wow:nth-child(6) h4 {
+	color: #1abc9c;
+}
+.services .wow:nth-child(7), .services .wow:nth-child(7) h4 {
+	color: #f1c40f;
+}
+.services .wow:nth-child(8), .services .wow:nth-child(8) h4 {
+	color: #2c3e50;
+}
 .services .service-item h4 {
 	font-weight:700;
 	font-size:18px;
@@ -2255,4 +2282,52 @@ opacity: 0.99;
 .caption a:hover {
 	color: #ffa902;
 }
-.module
+.header-banner{
+	background-image: url(../images/slider/cloud2.jpg);
+	background-size: 100% 100%;
+	background-position: center center;
+	
+}
+.header-banner .blur{
+	padding: 150px 100px;
+	background: rgba(0,0,0,.1);
+}
+.header-banner h2{
+	font-family: "Source Sans Pro", sans-serif; 
+	font-size: 74px;
+	color: #fff;
+	font-weight: 900;
+	margin: 0 80px 0 0;
+	line-height: 1.3;
+}
+.header-banner h3{
+	font-family: "Source Sans Pro", sans-serif; 
+	font-size: 24px;
+	color: #fff;
+	font-weight: 400;
+	margin: 45px 80px 0 0;
+
+}
+.header-banner img{
+	width: 100%;
+	animation: example 4s infinite linear;
+	transform: rotateY(180deg);
+}
+.header-banner h5{
+	transition-duration: .5s;
+}
+.header-banner h5 a{
+	text-align: center;
+	color: #fff;
+	display: block;
+}
+.header-banner h5:hover{
+	transform: scale(1.2);
+}
+ @keyframes example {
+    0%   {transform: rotateY(180deg) scale(1.2);}
+    25%  {transform: rotateY(180deg) scale(1.4);}
+    50%  {transform: rotateY(180deg) scale(1.6);}
+    75%  {transform: rotateY(180deg) scale(1.4);}
+    100% {transform: rotateY(180deg) scale(1.2);}
+} 
